removed overflow hidden from <article> to prevent clipping on facebook's send dropdown, and fixed bug with styling on twitter status links

--- a/.themes/classic/sass/partials/_blog.scss
+++ b/.themes/classic/sass/partials/_blog.scss
@@ -1,5 +1,4 @@
 article {
-  overflow: hidden;
   padding-top: 1em;
   a { @extend .force-wrap; }
   header {
